--- a/resources/html/check.html
+++ b/resources/html/check.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-  <img src="/img/warning_clojure.png"></img>
+<h3> I feel great </h3>
 {% endblock %}
